// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthorityBadge theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <div>
    <span
      class="rh-badge rh-badge--md rh-badge--status-accepted rh-authority-badge"
      data-authority="accepted"
      data-status="accepted"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check rh-icon"
        data-icon="circle-check"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m16 9-5.5 5.5L8 12"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Accepted
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-candidate rh-authority-badge"
      data-authority="candidate"
      data-status="candidate"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-dashed rh-icon"
        data-icon="circle-dashed"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.1 2.182a10 10 0 0 1 3.8 0"
        />
        <path
          d="M13.9 21.818a10 10 0 0 1-3.8 0"
        />
        <path
          d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
        />
        <path
          d="M2.182 13.9a10 10 0 0 1 0-3.8"
        />
        <path
          d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
        />
        <path
          d="M21.818 10.1a10 10 0 0 1 0 3.8"
        />
        <path
          d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
        />
        <path
          d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Candidate
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-qualified rh-authority-badge"
      data-authority="qualified"
      data-status="qualified"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-info rh-icon"
        data-icon="info"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Qualified
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-contested rh-authority-badge"
      data-authority="contested"
      data-status="contested"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert rh-icon"
        data-icon="alert-triangle"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Contested
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-stale rh-authority-badge"
      data-authority="stale"
      data-status="stale"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock rh-icon"
        data-icon="clock"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 6v6l4 2"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Stale
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-private rh-authority-badge"
      data-authority="private"
      data-status="private"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-lock rh-icon"
        data-icon="lock"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="11"
          rx="2"
          ry="2"
          width="18"
          x="3"
          y="11"
        />
        <path
          d="M7 11V7a5 5 0 0 1 10 0v4"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Private
      </span>
    </span>
  </div>
</div>
`;

exports[`AuthorityBadge theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <div>
    <span
      class="rh-badge rh-badge--md rh-badge--status-accepted rh-authority-badge"
      data-authority="accepted"
      data-status="accepted"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check rh-icon"
        data-icon="circle-check"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m16 9-5.5 5.5L8 12"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Accepted
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-candidate rh-authority-badge"
      data-authority="candidate"
      data-status="candidate"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-dashed rh-icon"
        data-icon="circle-dashed"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.1 2.182a10 10 0 0 1 3.8 0"
        />
        <path
          d="M13.9 21.818a10 10 0 0 1-3.8 0"
        />
        <path
          d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
        />
        <path
          d="M2.182 13.9a10 10 0 0 1 0-3.8"
        />
        <path
          d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
        />
        <path
          d="M21.818 10.1a10 10 0 0 1 0 3.8"
        />
        <path
          d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
        />
        <path
          d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Candidate
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-qualified rh-authority-badge"
      data-authority="qualified"
      data-status="qualified"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-info rh-icon"
        data-icon="info"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Qualified
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-contested rh-authority-badge"
      data-authority="contested"
      data-status="contested"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert rh-icon"
        data-icon="alert-triangle"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Contested
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-stale rh-authority-badge"
      data-authority="stale"
      data-status="stale"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock rh-icon"
        data-icon="clock"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 6v6l4 2"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Stale
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-private rh-authority-badge"
      data-authority="private"
      data-status="private"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-lock rh-icon"
        data-icon="lock"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="11"
          rx="2"
          ry="2"
          width="18"
          x="3"
          y="11"
        />
        <path
          d="M7 11V7a5 5 0 0 1 10 0v4"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Private
      </span>
    </span>
  </div>
</div>
`;

exports[`AuthorityBadge theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <div>
    <span
      class="rh-badge rh-badge--md rh-badge--status-accepted rh-authority-badge"
      data-authority="accepted"
      data-status="accepted"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check rh-icon"
        data-icon="circle-check"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m16 9-5.5 5.5L8 12"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Accepted
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-candidate rh-authority-badge"
      data-authority="candidate"
      data-status="candidate"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-dashed rh-icon"
        data-icon="circle-dashed"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.1 2.182a10 10 0 0 1 3.8 0"
        />
        <path
          d="M13.9 21.818a10 10 0 0 1-3.8 0"
        />
        <path
          d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
        />
        <path
          d="M2.182 13.9a10 10 0 0 1 0-3.8"
        />
        <path
          d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
        />
        <path
          d="M21.818 10.1a10 10 0 0 1 0 3.8"
        />
        <path
          d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
        />
        <path
          d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Candidate
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-qualified rh-authority-badge"
      data-authority="qualified"
      data-status="qualified"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-info rh-icon"
        data-icon="info"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Qualified
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-contested rh-authority-badge"
      data-authority="contested"
      data-status="contested"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert rh-icon"
        data-icon="alert-triangle"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Contested
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-stale rh-authority-badge"
      data-authority="stale"
      data-status="stale"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock rh-icon"
        data-icon="clock"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 6v6l4 2"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Stale
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-private rh-authority-badge"
      data-authority="private"
      data-status="private"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-lock rh-icon"
        data-icon="lock"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="11"
          rx="2"
          ry="2"
          width="18"
          x="3"
          y="11"
        />
        <path
          d="M7 11V7a5 5 0 0 1 10 0v4"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Private
      </span>
    </span>
  </div>
</div>
`;

exports[`AuthorityBadge theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <div>
    <span
      class="rh-badge rh-badge--md rh-badge--status-accepted rh-authority-badge"
      data-authority="accepted"
      data-status="accepted"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check rh-icon"
        data-icon="circle-check"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m16 9-5.5 5.5L8 12"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Accepted
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-candidate rh-authority-badge"
      data-authority="candidate"
      data-status="candidate"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-dashed rh-icon"
        data-icon="circle-dashed"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.1 2.182a10 10 0 0 1 3.8 0"
        />
        <path
          d="M13.9 21.818a10 10 0 0 1-3.8 0"
        />
        <path
          d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
        />
        <path
          d="M2.182 13.9a10 10 0 0 1 0-3.8"
        />
        <path
          d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
        />
        <path
          d="M21.818 10.1a10 10 0 0 1 0 3.8"
        />
        <path
          d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
        />
        <path
          d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Candidate
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-qualified rh-authority-badge"
      data-authority="qualified"
      data-status="qualified"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-info rh-icon"
        data-icon="info"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Qualified
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-contested rh-authority-badge"
      data-authority="contested"
      data-status="contested"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert rh-icon"
        data-icon="alert-triangle"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Contested
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-stale rh-authority-badge"
      data-authority="stale"
      data-status="stale"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock rh-icon"
        data-icon="clock"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 6v6l4 2"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Stale
      </span>
    </span>
    <span
      class="rh-badge rh-badge--md rh-badge--status-private rh-authority-badge"
      data-authority="private"
      data-status="private"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-lock rh-icon"
        data-icon="lock"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="11"
          rx="2"
          ry="2"
          width="18"
          x="3"
          y="11"
        />
        <path
          d="M7 11V7a5 5 0 0 1 10 0v4"
        />
      </svg>
      <span
        class="rh-badge__label"
      >
        Private
      </span>
    </span>
  </div>
</div>
`;
